crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__simple_commands__parse_echo_hello.snap
---
source: cash-parser/src/parser/tests/simple_commands.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "echo hello",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "hello",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
